#![allow(unused_imports, unused_variables, dead_code, unused_mut, deprecated)]


//! API模块化服务架构
//! 
//! 基于微服务架构设计的交易系统服务层，提供：
//! - 统一的服务接口和契约
//! - gRPC 和 REST API 支持
//! - 服务发现和负载均衡
//! - 分布式追踪和监控
//! - 容错和重试机制

pub mod gateway;
pub mod backtest;
pub mod factor;
pub mod risk;
pub mod portfolio;
pub mod execution;
pub mod contracts;

pub mod common;
pub mod middleware;
pub mod discovery;

use async_trait::async_trait;
use serde::{Deserialize, Serialize};
use std::collections::HashMap;
use std::fmt::Debug;
use thiserror::Error;
use uuid::Uuid;

/// 服务错误类型
#[derive(Debug, Error)]
pub enum ServiceError {
    #[error("服务不可用: {service}")]
    ServiceUnavailable { service: String },
    
    #[error("请求超时: {timeout_ms}ms")]
    RequestTimeout { timeout_ms: u64 },
    
    #[error("资源耗尽: {resource}")]
    ResourceExhausted { resource: String },
    
    #[error("权限被拒绝: {reason}")]
    PermissionDenied { reason: String },
    
    #[error("请求无效: {details}")]
    InvalidRequest { details: String },
    
    #[error("内部服务错误: {message}")]
    InternalError { message: String },
    
    #[error("配置错误: {config}")]
    ConfigurationError { config: String },
    
    #[error("网络错误: {error}")]
    NetworkError { error: String },
}

/// 服务结果类型
pub type ServiceResult<T> = Result<T, ServiceError>;

/// 通用请求元数据
#[derive(Debug, Clone, Serialize, Deserialize)]
pub struct RequestMetadata {
    /// 请求ID（用于追踪）
    pub request_id: String,
    /// 关联ID（用于链路追踪）
    pub correlation_id: String,
    /// 幂等性密钥
    pub idempotency_key: Option<String>,
    /// 客户端信息
    pub client_info: ClientInfo,
    /// 请求时间戳
    pub timestamp: chrono::DateTime<chrono::Utc>,
    /// 超时时间（毫秒）
    pub timeout_ms: Option<u64>,
    /// 优先级（0-100，数值越大优先级越高）
    pub priority: u8,
    /// 自定义标签
    pub labels: HashMap<String, String>,
}

impl Default for RequestMetadata {
    fn default() -> Self {
        Self {
            request_id: Uuid::new_v4().to_string(),
            correlation_id: Uuid::new_v4().to_string(),
            idempotency_key: None,
            client_info: ClientInfo::default(),
            timestamp: chrono::Utc::now(),
            timeout_ms: Some(30000), // 30秒默认超时
            priority: 50,
            labels: HashMap::new(),
        }
    }
}

/// 客户端信息
#[derive(Debug, Clone, Serialize, Deserialize)]
pub struct ClientInfo {
    /// 客户端ID
    pub client_id: String,
    /// 用户ID
    pub user_id: Option<String>,
    /// 会话ID
    pub session_id: Option<String>,
    /// 客户端版本
    pub client_version: String,
    /// 用户代理
    pub user_agent: String,
    /// 客户端IP地址
    pub client_ip: String,
}

impl Default for ClientInfo {
    fn default() -> Self {
        Self {
            client_id: "unknown".to_string(),
            user_id: None,
            session_id: None,
            client_version: "1.0.0".to_string(),
            user_agent: "rust-trading-service".to_string(),
            client_ip: "127.0.0.1".to_string(),
        }
    }
}

/// 通用响应元数据
#[derive(Debug, Clone, Serialize, Deserialize)]
pub struct ResponseMetadata {
    /// 请求ID（与请求相同）
    pub request_id: String,
    /// 响应时间戳
    pub timestamp: chrono::DateTime<chrono::Utc>,
    /// 处理时长（微秒）
    pub processing_time_us: u64,
    /// 服务版本
    pub service_version: String,
    /// 服务实例ID
    pub service_instance_id: String,
    /// 重试次数
    pub retry_count: u32,
    /// 缓存命中标志
    pub cache_hit: bool,
}

/// 分页信息
#[derive(Debug, Clone, Serialize, Deserialize)]
pub struct Pagination {
    /// 页码（从1开始）
    pub page: u32,
    /// 每页大小
    pub page_size: u32,
    /// 总记录数
    pub total_count: Option<u64>,
    /// 总页数
    pub total_pages: Option<u32>,
    /// 是否有下一页
    pub has_next: bool,
    /// 是否有上一页
    pub has_previous: bool,
}

impl Default for Pagination {
    fn default() -> Self {
        Self {
            page: 1,
            page_size: 50,
            total_count: None,
            total_pages: None,
            has_next: false,
            has_previous: false,
        }
    }
}

/// 服务健康状态
#[derive(Debug, Clone, Serialize, Deserialize, PartialEq)]
pub enum HealthStatus {
    /// 健康
    Healthy,
    /// 降级运行
    Degraded,
    /// 不健康
    Unhealthy,
    /// 未知状态
    Unknown,
}

/// 服务健康检查结果
#[derive(Debug, Clone, Serialize, Deserialize)]
pub struct HealthCheck {
    /// 服务名称
    pub service_name: String,
    /// 健康状态
    pub status: HealthStatus,
    /// 版本信息
    pub version: String,
    /// 运行时长（秒）
    pub uptime_seconds: u64,
    /// 详细信息
    pub details: HashMap<String, serde_json::Value>,
    /// 检查时间戳
    pub timestamp: chrono::DateTime<chrono::Utc>,
}

/// 通用服务trait
#[async_trait]
pub trait Service: Send + Sync + Debug {
    /// 服务名称
    fn name(&self) -> &str;
    
    /// 服务版本
    fn version(&self) -> &str;
    
    /// 启动服务
    async fn start(&mut self) -> ServiceResult<()>;
    
    /// 停止服务
    async fn stop(&mut self) -> ServiceResult<()>;
    
    /// 健康检查
    async fn health_check(&self) -> ServiceResult<HealthCheck>;
    
    /// 服务是否正在运行
    fn is_running(&self) -> bool;
}

/// 请求-响应服务trait
#[async_trait]
pub trait RequestResponseService<Req, Res>: Service
where
    Req: Send + Sync,
    Res: Send + Sync,
{
    /// 处理请求
    async fn handle_request(&self, request: Req, metadata: RequestMetadata) -> ServiceResult<(Res, ResponseMetadata)>;
}

/// 流式服务trait
#[async_trait]
pub trait StreamingService<Req, Res>: Service
where
    Req: Send + Sync,
    Res: Send + Sync,
{
    /// 处理流式请求
    async fn handle_streaming_request(
        &self,
        request_stream: tokio_stream::wrappers::ReceiverStream<Req>,
        metadata: RequestMetadata,
    ) -> ServiceResult<tokio_stream::wrappers::ReceiverStream<Res>>;
}

/// 服务配置trait
pub trait ServiceConfig: Send + Sync + Clone + Debug {
    /// 验证配置是否有效
    fn validate(&self) -> ServiceResult<()>;
    
    /// 获取服务端点
    fn get_endpoint(&self) -> String;
    
    /// 获取最大连接数
    fn get_max_connections(&self) -> u32 {
        1000
    }
    
    /// 获取超时配置
    fn get_timeout_ms(&self) -> u64 {
        30000
    }
    
    /// 是否启用TLS
    fn tls_enabled(&self) -> bool {
        false
    }
}

/// 服务发现接口
#[async_trait]
pub trait ServiceDiscovery: Send + Sync {
    /// 注册服务
    async fn register_service(&self, service_info: ServiceInfo) -> ServiceResult<()>;
    
    /// 注销服务
    async fn deregister_service(&self, service_id: &str) -> ServiceResult<()>;
    
    /// 发现服务实例
    async fn discover_services(&self, service_name: &str) -> ServiceResult<Vec<ServiceInfo>>;
    
    /// 获取服务健康状态
    async fn get_service_health(&self, service_id: &str) -> ServiceResult<HealthStatus>;
}

/// 服务信息
#[derive(Debug, Clone, Serialize, Deserialize)]
pub struct ServiceInfo {
    /// 服务ID
    pub service_id: String,
    /// 服务名称
    pub service_name: String,
    /// 服务版本
    pub version: String,
    /// 服务地址
    pub address: String,
    /// 服务端口
    pub port: u16,
    /// 服务标签
    pub tags: Vec<String>,
    /// 元数据
    pub metadata: HashMap<String, String>,
    /// 注册时间
    pub registered_at: chrono::DateTime<chrono::Utc>,
    /// 最后心跳时间
    pub last_heartbeat: chrono::DateTime<chrono::Utc>,
}

/// 服务管理器
pub struct ServiceManager {
    services: HashMap<String, Box<dyn Service>>,
    discovery: Option<Box<dyn ServiceDiscovery>>,
}

impl ServiceManager {
    pub fn new() -> Self {
        Self {
            services: HashMap::new(),
            discovery: None,
        }
    }
    
    /// 注册服务
    pub fn register_service(&mut self, service: Box<dyn Service>) {
        let service_name = service.name().to_string();
        self.services.insert(service_name, service);
    }
    
    /// 设置服务发现
    pub fn set_discovery(&mut self, discovery: Box<dyn ServiceDiscovery>) {
        self.discovery = Some(discovery);
    }
    
    /// 启动所有服务
    pub async fn start_all(&mut self) -> ServiceResult<()> {
        for (name, service) in &mut self.services {
            if let Err(e) = service.start().await {
                return Err(ServiceError::InternalError {
                    message: format!("Failed to start service {}: {}", name, e),
                });
            }
        }
        Ok(())
    }
    
    /// 停止所有服务
    pub async fn stop_all(&mut self) -> ServiceResult<()> {
        for (name, service) in &mut self.services {
            if let Err(e) = service.stop().await {
                eprintln!("Warning: Failed to stop service {}: {}", name, e);
            }
        }
        Ok(())
    }
    
    /// 获取所有服务的健康状态
    pub async fn health_check_all(&self) -> HashMap<String, HealthCheck> {
        let mut results = HashMap::new();
        
        for (name, service) in &self.services {
            match service.health_check().await {
                Ok(health) => {
                    results.insert(name.clone(), health);
                }
                Err(_) => {
                    // 创建一个表示不健康状态的健康检查结果
                    let unhealthy = HealthCheck {
                        service_name: name.clone(),
                        status: HealthStatus::Unhealthy,
                        version: "unknown".to_string(),
                        uptime_seconds: 0,
                        details: HashMap::new(),
                        timestamp: chrono::Utc::now(),
                    };
                    results.insert(name.clone(), unhealthy);
                }
            }
        }
        
        results
    }
}

impl Default for ServiceManager {
    fn default() -> Self {
        Self::new()
    }
}

/// 服务工厂trait
pub trait ServiceFactory: Send + Sync {
    /// 服务类型
    type Service: Service;
    /// 配置类型
    type Config: ServiceConfig;
    
    /// 创建服务实例
    fn create_service(&self, config: Self::Config) -> ServiceResult<Self::Service>;
    
    /// 获取服务默认配置
    fn default_config(&self) -> Self::Config;
}

#[cfg(test)]
mod tests {
    use super::*;

    #[test]
    fn test_request_metadata_creation() {
        let metadata = RequestMetadata::default();
        assert!(!metadata.request_id.is_empty());
        assert!(!metadata.correlation_id.is_empty());
        assert_eq!(metadata.priority, 50);
    }

    #[test]
    fn test_health_status_serialization() {
        let status = HealthStatus::Healthy;
        let json = serde_json::to_string(&status).unwrap();
        let deserialized: HealthStatus = serde_json::from_str(&json).unwrap();
        assert_eq!(status, deserialized);
    }

    #[test]
    fn test_pagination_default() {
        let pagination = Pagination::default();
        assert_eq!(pagination.page, 1);
        assert_eq!(pagination.page_size, 50);
        assert!(!pagination.has_next);
        assert!(!pagination.has_previous);
    }

    #[test]
    fn test_service_manager_creation() {
        let manager = ServiceManager::new();
        assert!(manager.services.is_empty());
        assert!(manager.discovery.is_none());
    }
}
